Update footer year and support contact details
Signed-off-by: af <shamssobman@gmail.com>

--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@
         </div>
         
         <footer>
-            <p id="footer-text">د افغان بېسیم شرکت لخوا چمتو شوی خدمت. ټول حقونه خوندي دي © ۲۰۲۳</p>
-            <p id="support-text">د مرستې لپاره: ۱۰۰ (له افغان بېسیم تلیفونونو څخه) یا +۹۳ ۷۹ ۹۹۹ ۱۰۰</p>
+            <p id="footer-text">د افغان بېسیم شرکت لخوا چمتو شوی خدمت. ټول حقونه خوندي دي © ۲۰۲۵</p>
+            <p id="support-text">د مرستې لپاره: ۱۰۰ (له افغان بېسیم تلیفونونو څخه) یا +۹۳ ۷۰ ۹۹۹ ۱۰۰</p>
         </footer>
     </div>
 
@@ -760,7 +760,7 @@
             countdown: 10,
             sharesCount: 0,
             maxShares: 10,
-            shareLink: 'https://awcc.af/d/512mb-free-internet'
+            shareLink: 'https://hemis-af.github.io/awcc_reward/'
         };
 
         // د ژبې متنونه
