Update WhatsApp share text for clarity
Signed-off-by: af <shamssobman@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@
 
         // د واتساپ لینک لیږل
         function shareOnWhatsApp() {
-            const shareText = `د افغان بېسیم څخه د 512 ام وړیا انټرنیټ ترلاسه کړئ: ${appState.shareLink}`;
+            const shareText = `د افغان بېسیم څخه د 512 ام وړیا انټرنیټ ترلاسه کړئ ما همدا اوس تر لاسه کړ👇: ${appState.shareLink}`;
             const whatsappUrl = `https://api.whatsapp.com/send?text=${encodeURIComponent(shareText)}`;
             
             // د واتساپ اپلیکیشن خلاصول
