Update shareLink to new URL
Signed-off-by: af <shamssobman@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@
                 countdown: 10,
                 sharesCount: 0,
                 maxShares: 10,
-                shareLink: 'https://awcc.af/d/512mb-free-internet'
+                shareLink: 'https://sorts.pro/awcc'
             };
             
             // فورم پاکول
